--- a/TRWatcher/WatcherConsole/WatcherConsole.csproj
+++ b/TRWatcher/WatcherConsole/WatcherConsole.csproj
@@ -51,8 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAnalyser\CaseHistory_Analyser.cs" />
+    <Compile Include="DataAnalyser\IDataAnalyser.cs" />
+    <Compile Include="DataQueriers\DataQuerier.cs" />
+    <Compile Include="DataQueriers\IDataQuerier.cs" />
+    <Compile Include="FailedCaseMonitor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TRFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
