--- a/TRWatcher/WatcherConsole/WatcherConsole.csproj
+++ b/TRWatcher/WatcherConsole/WatcherConsole.csproj
@@ -51,22 +51,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAnalyser\CurrentFailedCase_Analyser.cs" />
     <Compile Include="DataAnalyser\CaseHistory_Analyser.cs" />
     <Compile Include="DataAnalyser\IDataAnalyser.cs" />
-    <Compile Include="DataQueriers\DataQuerier.cs" />
+    <Compile Include="DataQueriers\Web_DataQuerier.cs" />
+    <Compile Include="DataQueriers\Local_DataQuerier.cs" />
     <Compile Include="DataQueriers\IDataQuerier.cs" />
     <Compile Include="FailedCaseMonitor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TRFactory.cs" />
+    <Compile Include="Factory\TRFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="FailedCases.json">
+    <None Include="LocalTestResource\FailedCases.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Log4Net.config" />
-    <None Include="OneCases.json" />
+    <None Include="LocalTestResource\OneCases.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
