--- a/TRWatcher/WatcherConsole/WatcherConsole.csproj
+++ b/TRWatcher/WatcherConsole/WatcherConsole.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Factory\TRFactory.cs" />
+    <Compile Include="QueryStatement\StatementHandler\IStatementHandler.cs" />
+    <Compile Include="QueryStatement\Statement\IStatement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
