--- a/TRWatcher/WatcherConsole/WatcherConsole.csproj
+++ b/TRWatcher/WatcherConsole/WatcherConsole.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Factory\TRFactory.cs" />
     <Compile Include="QueryStatement\StatementHandler\IStatementHandler.cs" />
+    <Compile Include="QueryStatement\StatementHandler\StatementSearcher.cs" />
     <Compile Include="QueryStatement\Statement\BasisStatement.cs" />
     <Compile Include="QueryStatement\Statement\ContainerStatement.cs" />
     <Compile Include="QueryStatement\Statement\IStatement.cs" />
